[package]
name = "magiceden-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]

[dependencies]
backoff = {version = "0.4.0", features = ["tokio"] }
reqwest = { version = "0.11.14", features = ["json", "stream", "multipart"],default-features = false }
reqwest-eventsource = "0.4.0"
derive_builder = "0.12.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["fs", "macros"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
bytes = "1.5.0"
